Style/Fixup  * vertical align tinyicons in SpellMod array on SpellDetailPage

--- a/static/css/aowow.css
+++ b/static/css/aowow.css
@@ -1519,6 +1519,7 @@ span.icon-instance8 {
 
 .icontab th {
     padding: 0 3px 0 0;
+    vertical-align: middle !important;                      /* aowow: fix valign in spellmod tinyicon list */
 }
 
 .icontab-box {
